# fitbitscrape

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  PLAN.md  README.md  main.py  pyproject.toml
data/: .rate_limit_state.json
src/: __init__.py  auth.py  download.py  fetcher.py  rate_limiter.py  state.py  utils.py
src/endpoints/: __init__.py  activity.py  body.py  glucose.py  health_metrics.py  heart.py  nutrition.py  profile.py  sleep.py  social.py
tests/: __init__.py  test_activity_resume.py  test_state.py  test_utils.py
