[project]
name = "fitbitscrape"
version = "0.1.0"
description = "Extract all Fitbit user data via Web API with rate limiting and resumability"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "requests-oauthlib>=2.0.0",
    "click>=8.1.7",
    "humanize>=4.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.6",
    "ty>=0.0.9",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
